--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
                                     <span class="skill-tag">CSS</span>
                                     <span class="skill-tag">JavaScript (Frontend)</span>
                                     <span class="skill-tag">Python Programming</span>
-                                    <span class="skill-tag">PHP (Beginner)</span>
-                                    <span class="skill-tag">Backend Development (Beginner)</span>
+                                    <span class="skill-tag">PHP </span>
+                                    <span class="skill-tag">Backend Development </span>
                                 </div>
                             </div>
                             <div>
